funcionando, somente o final do ip

--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
         <p>Gerencie atalhos da área de trabalho em sua rede.</p>
 
         <div class="input-group">
-            <label for="start-octet">IP Inicial (Final):</label>
-            <input type="text" id="start-octet" value="101">
-        </div>
-
-        <div class="input-group">
-            <label for="end-octet">IP Final (Final):</label>
-            <input type="text" id="end-octet" value="125">
+            <label for="ip-endings">Finais dos IPs (separados por vírgula):</label>
+            <input type="text" id="ip-endings" value="101, 105, 110">
         </div>
         
         <div class="input-group">
