feat: Adiciona backend Flask e frontend inicial do gerenciador

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="form-controls">
                     <div class="input-group">
                         <label for="password">Senha:</label>
-                        <input type="password" id="password" placeholder="Digite a senha SSH">
+                        <input type="password" id="password" placeholder="Digite a senha SSH" value="qwe123">
                     </div>
 
                     <div class="input-group">
