--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                         <textarea id="message-text" placeholder="Digite a mensagem para exibir na tela" rows="3"></textarea>
                     </div>
 
+                    <div class="input-group hidden" id="backup-path-group">
+                        <label for="backup-path">Caminho do Backup (Opcional):</label>
+                        <input type="text" id="backup-path" placeholder="Ex: /caminho/para/backup_alternativo/">
+                    </div>
+
                     <button type="button" id="refresh-btn">
                         <span class="btn-icon">🔄</span>
                         <span class="btn-text">Atualizar Lista</span>
