--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="form-controls">
                     <div class="input-group">
                         <label for="password">Senha:</label>
-                        <input type="password" id="password" placeholder="Digite a senha SSH" value="qwe123">
+                        <input type="password" id="password" placeholder="Digite a senha SSH">
                     </div>
 
                     <div class="input-group">
@@ -46,6 +46,7 @@
                                 <div class="checkbox-item"><input type="checkbox" id="action-mostrar_sistema" name="action" value="mostrar_sistema"><label for="action-mostrar_sistema">Mostrar Ícones do Sistema</label></div>
                                 <div class="checkbox-item"><input type="checkbox" id="action-ocultar_sistema" name="action" value="ocultar_sistema"><label for="action-ocultar_sistema">Ocultar Ícones do Sistema</label></div>
                                 <div class="checkbox-item"><input type="checkbox" id="action-limpar_imagens" name="action" value="limpar_imagens"><label for="action-limpar_imagens">Limpar Pasta de Imagens</label></div>
+                                <div class="checkbox-item"><input type="checkbox" id="action-atualizar_sistema" name="action" value="atualizar_sistema"><label for="action-atualizar_sistema">Atualizar Sistema</label></div>
                             </fieldset>
                             <fieldset>
                                 <legend>Controle da Interface</legend>
