--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                                 <legend>Controle de Periféricos</legend>
                                 <div class="checkbox-item"><input type="checkbox" id="action-desativar_perifericos" name="action" value="desativar_perifericos"><label for="action-desativar_perifericos">Desativar Mouse e Teclado</label></div>
                                 <div class="checkbox-item"><input type="checkbox" id="action-ativar_perifericos" name="action" value="ativar_perifericos"><label for="action-ativar_perifericos">Ativar Mouse e Teclado</label></div>
+                                <div class="checkbox-item"><input type="checkbox" id="action-desativar_botao_direito" name="action" value="desativar_botao_direito"><label for="action-desativar_botao_direito">Desativar Botão Direito</label></div>
+                                <div class="checkbox-item"><input type="checkbox" id="action-ativar_botao_direito" name="action" value="ativar_botao_direito"><label for="action-ativar_botao_direito">Ativar Botão Direito</label></div>
                             </fieldset>
                             <fieldset>
                                 <legend>Ações Remotas</legend>
