--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                                 <div class="checkbox-item"><input type="checkbox" id="action-tema_claro" name="action" value="tema_claro"><label for="action-tema_claro">Aplicar Tema Claro</label></div>
                             </fieldset>
                             <fieldset>
+                                <legend>Configurações do Navegador</legend>
+                                <div class="checkbox-item"><input type="checkbox" id="action-definir_firefox_padrao" name="action" value="definir_firefox_padrao"><label for="action-definir_firefox_padrao">Definir Firefox como Padrão</label></div>
+                                <div class="checkbox-item"><input type="checkbox" id="action-definir_chrome_padrao" name="action" value="definir_chrome_padrao"><label for="action-definir_chrome_padrao">Definir Chrome como Padrão</label></div>
+                            </fieldset>
+                            <fieldset>
                                 <legend>Controle de Periféricos</legend>
                                 <div class="checkbox-item"><input type="checkbox" id="action-desativar_perifericos" name="action" value="desativar_perifericos"><label for="action-desativar_perifericos">Desativar Mouse e Teclado</label></div>
                                 <div class="checkbox-item"><input type="checkbox" id="action-ativar_perifericos" name="action" value="ativar_perifericos"><label for="action-ativar_perifericos">Ativar Mouse e Teclado</label></div>
@@ -86,15 +91,15 @@
                         <input type="text" id="backup-path" placeholder="Ex: /caminho/para/backup_alternativo/">
                     </div>
 
-                    <button type="button" id="refresh-btn">
+                    <button type="button" id="refresh-btn" title="Atualizar a lista de dispositivos na rede">
                         <span class="btn-icon">🔄</span>
                         <span class="btn-text">Atualizar Lista</span>
                     </button>
-                    <button type="button" id="reset-btn">
+                    <button type="button" id="reset-btn" title="Limpar todas as seleções e campos">
                         <span class="btn-icon">🧹</span>
                         <span class="btn-text">Limpar Tudo</span>
                     </button>
-                    <button type="submit" id="submit-btn">
+                    <button type="submit" id="submit-btn" title="Executar as ações selecionadas nos IPs marcados">
                         <span class="btn-icon">▶️</span>
                         <span class="btn-text">Executar Ação</span>
                     </button>
